--- a/TheWheatherApp/TheWheatherApp/AppScene/Home/Cells/CellCityWheather.xib
+++ b/TheWheatherApp/TheWheatherApp/AppScene/Home/Cells/CellCityWheather.xib
@@ -10,27 +10,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="62" id="KGk-i7-Jjw" customClass="CellCityWheather" customModule="TheWheatherApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CellCityWheather" customModule="TheWheatherApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Aj-pI-4gF" userLabel="ContainerView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yrE-xR-IjE" userLabel="Divider">
+                                <rect key="frame" x="15" y="61" width="290" height="1"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.51861693527524833" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="gjY-v1-ZL0"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xAc-7Q-4T6">
-                                <rect key="frame" x="10" y="0.0" width="300" height="62"/>
+                                <rect key="frame" x="20" y="0.0" width="290" height="62"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rajkot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abS-Z1-CnI">
-                                        <rect key="frame" x="0.0" y="0.0" width="220" height="62"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="290" height="62"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rwF-gk-eaV">
-                                        <rect key="frame" x="220" y="0.0" width="40" height="62"/>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rwF-gk-eaV">
+                                        <rect key="frame" x="290" y="0.0" width="40" height="62"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="moon.stars" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="jEW-u2-3oK">
                                                 <rect key="frame" x="0.0" y="20" width="40" height="19.5"/>
@@ -44,8 +51,8 @@
                                             <constraint firstAttribute="width" constant="40" id="U9l-j2-BRW"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se0-79-qkQ">
-                                        <rect key="frame" x="260" y="0.0" width="40" height="62"/>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se0-79-qkQ">
+                                        <rect key="frame" x="290" y="0.0" width="40" height="62"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="n81-b1-Yg9"/>
                                         </constraints>
@@ -58,7 +65,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="xAc-7Q-4T6" firstAttribute="leading" secondItem="0Aj-pI-4gF" secondAttribute="leading" constant="10" id="69Q-0O-nv2"/>
+                            <constraint firstItem="yrE-xR-IjE" firstAttribute="leading" secondItem="0Aj-pI-4gF" secondAttribute="leading" constant="15" id="3m4-dD-tP8"/>
+                            <constraint firstItem="xAc-7Q-4T6" firstAttribute="leading" secondItem="0Aj-pI-4gF" secondAttribute="leading" constant="20" id="69Q-0O-nv2"/>
+                            <constraint firstAttribute="bottom" secondItem="yrE-xR-IjE" secondAttribute="bottom" id="8VK-Yp-nFo"/>
+                            <constraint firstAttribute="trailing" secondItem="yrE-xR-IjE" secondAttribute="trailing" constant="15" id="CQQ-Pu-p4R"/>
                             <constraint firstAttribute="bottom" secondItem="xAc-7Q-4T6" secondAttribute="bottom" id="Rxm-0H-Kq9"/>
                             <constraint firstItem="xAc-7Q-4T6" firstAttribute="top" secondItem="0Aj-pI-4gF" secondAttribute="top" id="gMU-YV-zlB"/>
                             <constraint firstAttribute="height" constant="62" id="gm5-CE-R9P"/>
@@ -74,6 +84,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="lblCities" destination="abS-Z1-CnI" id="HId-4o-y5t"/>
+            </connections>
             <point key="canvasLocation" x="-30.434782608695656" y="105.80357142857143"/>
         </tableViewCell>
     </objects>
