--- a/TheWheatherApp/TheWheatherApp/Resources/NotificationView/NotificationView.xib
+++ b/TheWheatherApp/TheWheatherApp/Resources/NotificationView/NotificationView.xib
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="NotificationView" customModule="MyTaxi" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="NotificationView" customModule="TheWheatherApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -17,19 +16,19 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5N2-pY-hCg">
-                            <rect key="frame" x="55" y="36" width="255" height="18"/>
+                            <rect key="frame" x="75" y="36" width="235" height="18"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Sih-zY-xfe">
-                                    <rect key="frame" x="5" y="0.0" width="250" height="18"/>
+                                    <rect key="frame" x="5" y="0.0" width="230" height="18"/>
                                     <subviews>
-                                        <label hidden="YES" opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ll0-yG-I0b" customClass="Label_Bold" customModule="MyTaxi" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="250" height="0.0"/>
+                                        <label hidden="YES" opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ll0-yG-I0b" customClass="Label_Bold" customModule="TheWheatherApp" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="230" height="0.0"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" text="Description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tL-tz-tM5" customClass="LabelNormal" customModule="MyTaxi" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="250" height="18"/>
+                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" text="Description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tL-tz-tM5" customClass="LabelNormal" customModule="TheWheatherApp" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="230" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
@@ -45,11 +44,11 @@
                                 <constraint firstAttribute="bottom" secondItem="Sih-zY-xfe" secondAttribute="bottom" id="mjG-v5-aDL"/>
                             </constraints>
                         </view>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myTaxiIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Zxz-wh-x7R">
-                            <rect key="frame" x="10" y="27.5" width="35" height="35"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud.sun.rain" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Zxz-wh-x7R">
+                            <rect key="frame" x="10" y="24.5" width="57.5" height="40.5"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="35" id="T3C-GD-00r"/>
+                                <constraint firstAttribute="width" constant="55" id="T3C-GD-00r"/>
                                 <constraint firstAttribute="height" constant="35" id="tNG-MP-LjB"/>
                             </constraints>
                         </imageView>
@@ -116,6 +115,6 @@
         </view>
     </objects>
     <resources>
-        <image name="myTaxiIcon" width="45" height="41"/>
+        <image name="cloud.sun.rain" catalog="system" width="128" height="125"/>
     </resources>
 </document>
